--- a/respondent/client/index.html
+++ b/respondent/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-
+<!--
+	Александр Веселов <veselov143@gmail.com>
+	СПбГУ, Математико-механический факультет, гр. 442
+	Май, 2016 г.
+-->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
